feat(restaurant): adding controller, repository and model for restaurant
